--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.15.3",
     "lodash": "^4.17.4",
     "morgan": "^1.8.2",
-    "nunjucks": "^3.0.1"
+    "nunjucks": "^3.0.1",
+    "socket-io": "^1.0.0",
+    "socket.io": "^2.0.3"
   }
 }
